# ie686_llm_project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  local.config.yaml.example  scratch_e2e.py  scratch_e2e_attraction.py  scratch_evaluation.py  scratch_flight_search.py  scratch_param_extraction.py  summary.md  tp.ics  tp.json  tp.md
langsmith_traces_analysis/: README.md  correct_langsmith_tool_error_analysis.ipynb  langsmith_trace_error_analysis.ipynb  pyproject.toml  travelagent_error_counts_by_agent.ipynb  travelplanner_langsmith_error_analysis_new.ipynb
langsmith_traces_analysis/scripts/: export_baseline_threads.py  export_full_travel_agent_threads.py  export_travel_agent_threads.py  extract_travelplan.py  extract_user_query.py  make_correct_error_analysis_notebook.py  make_error_analysis_notebook.py  make_latex_error_tables.py  make_single_thread_agent_system_notebook.py
langsmith_traces_analysis/traces/example_traces/: manifest.csv  manifest.jsonl
langsmith_traces_analysis/traces/manual_dashboard_exports/baseline/: run-019e31de-2cdd-7571-8bc5-ba9a8c44c5c8.json  run-019e31e1-8e99-7211-aee8-9173da3a6b42.json  run-019e31e3-08d2-79a3-93ee-0c104e936cb6.json  run-019e31e4-bcfd-7500-bfa5-11bb3be6756a.json  run-019e31e8-6914-7af1-b6a8-3f69d4694abb.json  run-019e31ea-c656-7531-a56d-08b64862bf19.json  run-019e31f0-35d2-7af1-8275-9b1174b8c0b0.json  run-019e31f5-c9d6-7a91-ac7f-37d9ddf3bdc3.json
langsmith_traces_analysis/traces/manual_dashboard_exports/travel_agent/: run-019e30e9-5a48-7d21-8141-76c25d06e1d0.json  run-019e30f0-c457-7b72-9ad9-01656f704cdc.json  run-019e30f5-baf1-73e3-9d80-fac667a9d285.json  run-019e3139-9620-78e2-9742-b53189867ea9.json  run-019e3172-4f4b-7710-9792-eb015e3252b0.json  run-019e319b-12cf-77f1-ba10-95817e5a4aa5.json
langsmith_traces_analysis/traces/thread_analysis/travel_agent/: manifest.csv  manifest.jsonl  tool_calls.csv  tool_calls.jsonl
scripts/: .gitignore  README.md  hello_world.py  pyproject.toml
scripts/evaluate/: AGENTS.md  error_analysis.py  evaluate.py  gen_travelplans.py  generate.py  pipeline.py
scripts/example_agents/: langgraph_minimal.py  zero_shot_baseline.py
travelplanner/: AGENTS.md  README.md  pyproject.toml  run_search_agent.py  test_constraint_iteration.py  test_general_web_search.py  test_hotel_search.py  test_live_routing.py  test_live_search.py  test_restaurant_search.py  tp.ics  tp.json  tp.md
travelplanner/examples/: baseline_agent_requests.json
travelplanner/examples/routing/: README.md  example.json
travelplanner/examples/routing_check/: input.json
travelplanner/examples/routing_check/inputs/: amsterdam_mixed.json  berlin_mixed.json  tuscany_sparse.json
travelplanner/src/travelplanner/: __init__.py  __main__.py  main.py
travelplanner/src/travelplanner/agents/: AGENTS.md  __init__.py  attraction_search_agent.py  constraint_agent.py  constraint_iteration_agent.py  evaluation_web_search_agent.py  execution_agent.py  experience_pool.json  llm_utils.py  (+15 more)
travelplanner/tests/: conftest.py  test_hotel_search_unit.py
travelplanner/tests/baseline_agent/: test_config_and_runner.py
travelplanner/tests/execution/: test_execution_graph.py  test_subagent_tool_registry.py
travelplanner/tests/general_web_search/: README.md  __init__.py
travelplanner/tests/hotel_search/: README.md  __init__.py
travelplanner/tests/schema/: test_task_model.py
travelplanner/tests/travelplan/: test_agent_loop.py  test_day.py  test_plan.py  test_slot.py  test_tools.py  test_validation_agent_setup.py
(+448 files in other folders)
