[project]
name = "check-run-json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=1.0,<2.dev0",
    "pandas<3.0",
    "plotly>=6.7.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "travelplanner",
    "wordcloud>=1.9.6",
]


[tool.uv.sources]
travelplanner = { git = "https://github.com/jmo2k02/TravelPlanner.git" }
