[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.15.0",
    "langgraph>=0.0.24",
    "openai>=0.27.2",
    "pydantic>=2.13.0",
    "travelplanner",
]

[tool.uv.sources]
travelplanner = { git = "https://github.com/jmo2k02/TravelPlanner.git" }
