[project]
name = "travelplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmo2k02", email = "justusmrosk@web.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
]

[project.scripts]
travelplanner = "travelplanner:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
