[project]
name = "travelplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmo2k02", email = "justusmrosk@web.de" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "inquirerpy>=0.3.4",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "ollama>=0.4.7",
    "pycountry>=23.12.11",
    "pydantic>=2.13.3",
    "pyspellchecker>=0.9.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "typer>=0.24.1",
]

[project.scripts]
tp = "travelplanner.cli.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
