[project]
name = "travelplanner"
version = "0.1.0"
description = "TravelPlanner Project for IE686 LLMs and Agents at University of Mannheim"
readme = "README.md"
authors = [
    { name = "Justus Mrosk", email = "justus@jmrosk.com" },
    { name = "Sebastian Menzel", email= "sebastian_menzel46@web.de"},
    { name = "Adrian Auenmueller", email = "nava.210704@gmail.com"},
    { name = "Lukas Strickler", email = "email@lukasstrickler.com"},
    { name = "Johannes Reithmeier", email = "johannes.ch.reithmeier@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "numpy>=1.26.0",
    "inquirerpy>=0.3.4",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "ollama>=0.4.7",
    "pycountry>=23.12.11",
    "pydantic>=2.13.3",
    "pyspellchecker>=0.9.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "typer>=0.24.1",
    "deepagents>=0.5.6",
    "ollama>=0.6.2",
    "icalendar>=7.1.0",
    "langsmith>=0.8.3",
]

[project.scripts]
tp = "travelplanner.cli.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
